# Research-RAGbot

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .vulture-whitelist.py  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  USER_MANUAL.md  app.py  bandit.yaml  ci.Dockerfile  cliff.toml  engine.py  packages.txt  pyproject.toml  requirements.txt  run.sh  setup-gitlab-runner.sh
.specify/memory/: constitution.md
.specify/templates/: feature_template.md  plan-template.md  spec-template.md  tasks-template.md
scripts/: runner-watchdog.sh
specs/: chat.feature
specs/chat/: plan.md  spec.md  tasks.md
tests/: test_app.py  test_engine.py
