[project]
name = "rag-chat-bot"
version = "1.0.0"
description = "Local Streamlit RAG research assistant for querying uploaded and preloaded documents with Ollama, LangChain, and ChromaDB."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"

[project.urls]
Repository = "git@ssh.code.swecha.org:ssmk/rag-chat-bot.git"

[tool.ruff]
target-version = "py311"
extend-exclude = [
  ".vulture-whitelist.py",
  "builds",
  "chroma_db",
  "myvenv",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
  "builds/",
  "myvenv/",
  "chroma_db/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
